# pqcrypto

.github/workflows/: ci.yml
pqcrypto/: Cargo.toml
pqcrypto-classicmceliece/: Cargo.toml  build.rs
pqcrypto-classicmceliece/src/: ffi.rs
pqcrypto-falcon/: Cargo.toml  build.rs
pqcrypto-falcon/src/: ffi.rs
pqcrypto-hqc/: Cargo.toml  build.rs
pqcrypto-hqc/src/: ffi.rs
pqcrypto-internals/: Cargo.toml  build.rs
pqcrypto-internals/src/: lib.rs
pqcrypto-mldsa/: Cargo.toml  build.rs
pqcrypto-mldsa/src/: ffi.rs
pqcrypto-mlkem/: Cargo.toml  build.rs
pqcrypto-mlkem/src/: ffi.rs
pqcrypto-sphincsplus/: Cargo.toml  build.rs
pqcrypto-sphincsplus/src/: ffi.rs
pqcrypto-template/pqcrypto/: Cargo.toml.j2
pqcrypto-template/scheme/: Cargo.toml.j2  build.rs.j2
pqcrypto-template/scheme/src/: ffi.rs.j2
