[package]
name = "pqcrypto-classicmceliece"
description = "Post-Quantum Key-Encapsulation Mechanism classicmceliece"
readme = "README.md"
version = "0.2.1"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rustpq/"
repository = "https://github.com/rustpq/pqcrypto/"
keywords = ["cryptography", "post-quantum", "security"]
categories = ["cryptography", "no-std"]

[dependencies]
pqcrypto-internals = { path = "../pqcrypto-internals", version = "0.2.6" }
pqcrypto-traits = { path = "../pqcrypto-traits", version = "0.3.5", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-big-array = { version = "0.5.1", optional = true }

[target.wasm32-unknown-unknown.dependencies]
wasm32-unknown-unknown-openbsd-libc = "0.2"

[features]
default = ["avx2", "std"]
avx2 = ["std"]
std = ["pqcrypto-traits/std"]
serialization = ["serde", "serde-big-array"]
getrandom_wasm_js = ["pqcrypto-internals/getrandom_wasm_js"]

[dev-dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3.0"

[badges]
travis-ci = { repository = "rustpq/pqcrypto", branch = "master" }
maintenance = { status = "actively-developed" }

